kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
      - path: /ghost
        backend:
          serviceName: ghost
          servicePort: 2368
      - path: /grafana
        backend:
          serviceName: grafana-ip-service
          servicePort: 3000


  - host: test.apps.example.info
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80

  - host: thecylon.com
    http:
      paths:
      - path: /gu
        backend:
          serviceName: guacamole-guacamole
          servicePort: 80
      - path: /guacd
        backend:
          serviceName: guacamole-guacd
          servicePort: 4822
